# aeon-tracer

./: .gitignore  CMakeLists.txt  README.md  bitmap.h  camera.h  color.h  common.h  hittable.h  hittable_list.h  image.ppm  int3.h  interval.h  main  main.cc  material.h  mesh.h  moving_sphere.h  ray.h  raytracer  sphere.h  tiny_obj_loader.h  triangle.h  vec3.h  your_program
main.dSYM/Contents/Resources/DWARF/: main
src/: AABB.h  BVH.h  Camera.h  Color.h  Common.h  Hittable.h  HittableList.h  Image.h  Interval.h  Material.h  Mesh.h  MovingSphere.h  Perlin.h  Ray.h  Sphere.h  Texture.h  Triangle.h  aabb.h  bitmap.h  hittable_list.h  interval.h  main.cc  material.h  mesh.h  sphere.h  vec3.h
writeup/: writeup.md
